# python_ai

./: Python进阶学习计划.md  README.md  output.txt  requirements.txt  study.md
basic/: basic_study.py  data.json  jdbc_study.py  multi_cpu.py
fastapi/: fast_api.py
game_script/: opencv_recognition.py  pyautogui_example.py
gemini_model/: gemini_flash.py
langchain-chat/: langchain_study.py
langchain_demo/: .env  README.md  requirements.txt
langchain_demo/01_basic/: 01_hello_world.py  02_prompt_template.py  03_conversation_memory.py  04_output_parser.py  05_streaming_output.py  06_tools_usage.py  (+3 more)
model/: README.md  chat_app.py  chat_ui.html  config.yaml
open_cv_demo/: 01_opencv_demo.py
practice/: FastAPI_使用说明.md  fastapi_demo.py  one_basic.py  person.json  test.txt  test_api.py  two_practice.py
study/: basic_study.py  class_decorators_study.py  decorator_study.py  exception_context_study.py  generators_iterators_study.py  inheritance_polymorphism_study.py  long_txt.txt  magic_methods_study.py  practice_study.py  student_data.json  students.json  test.py  test.txt  test_output.txt  truthiness_study.py
web_project/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
web_project/app/: __init__.py  config.py  database.py  main.py
web_project/app/api/: auth.py  deps.py  tasks.py  users.py
web_project/app/models/: __init__.py  task.py  user.py
web_project/app/schemas/: __init__.py  task.py  user.py
web_project/app/utils/: helpers.py  security.py
web_project/tests/: conftest.py  test_auth.py  test_tasks.py  test_users.py
(+17 files in other folders)
